tests/paczka1/fuzzy1/14312664.err
Error in line 23: OmmHnCKt S143 53,3
Error in line 29: N274sFtHhvM A198 -2,9
Error in line 7: N274sFtHhvM A198 27,1
